Closed Bug 673049 Opened 14 years ago Closed 14 years ago

Forwarding an .eml message causes message compose error

Categories

(Thunderbird :: Message Compose Window, defect)

All
Other
defect
Not set
normal

Tracking

(thunderbird6 fixed, thunderbird7 fixed)

RESOLVED FIXED
Thunderbird 8.0
Tracking Status
thunderbird6 --- fixed
thunderbird7 --- fixed

People

(Reporter: davepenfold, Assigned: squib)

References

(Blocks 1 open bug)

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:5.0.1) Gecko/20100101 Firefox/5.0.1 Build ID: 20110707182747 Steps to reproduce: Save a message to .eml format Open .eml message in TB (opens in new window) Click on Forward Actual results: First attempt, compose window opens with blank subject line On second attempt, error: An error occurred while creating a message compose window. Please try again. Expected results: Compose window should open as normal without error so email can be forwarded
Yes same issue in safe mode
Confirmed on nightly. I'm in the process of narrowing down where this is happening...
Status: UNCONFIRMED → NEW
Ever confirmed: true
Fallout from bug 583587, which adds references to forwarded messages, but this breaks for .emls because we can't get an nsIMsgDBHdr for them.
Blocks: 583587
Attached patch Fix this (obsolete) — Splinter Review
Here's a quick one-line patch to fix this. No tests, since it's just one line (though I keep thinking when my patch queue isn't full to bursting that I should write some more tests for .emls).
Attachment #547338 - Flags: review?(jonathan.protzenko)
Attached patch Fix this (again)Splinter Review
Sorry, *this* is a one-line fix. (The previous patch had an extra blank line that snuck in.)
Attachment #547338 - Attachment is obsolete: true
Attachment #547339 - Flags: review?(jonathan.protzenko)
Attachment #547338 - Flags: review?(jonathan.protzenko)
Comment on attachment 547339 [details] [diff] [review] Fix this (again) Looks like the right to do. Thanks for fixing this so quickly.
Attachment #547339 - Flags: review?(jonathan.protzenko) → review+
Assignee: nobody → squibblyflabbetydoo
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Comment on attachment 547339 [details] [diff] [review] Fix this (again) Asking for approval on branches. This is extremely low-risk, and high-gain for anyone who uses .eml files regularly.
Attachment #547339 - Flags: approval-comm-beta?
Attachment #547339 - Flags: approval-comm-aurora?
Keywords: regression
Attachment #547339 - Flags: approval-comm-beta?
Attachment #547339 - Flags: approval-comm-beta+
Attachment #547339 - Flags: approval-comm-aurora?
Attachment #547339 - Flags: approval-comm-aurora+
Odd, this bug looks entirely mailnews core, yet my test on SeaMonkey 2.2 (roughly == to miramar) appears to be fine.
Target Milestone: --- → Thunderbird 8.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: