Bug 673049 - Forwarding an .eml message causes message compose error; r=protz