mailnews/compose/src/nsMsgCompose.cpp
@@ -1752,7 +1752,7 @@ nsresult nsMsgCompose::CreateMessage(const char * originalMsgURI,
       m_compFields->SetReferences(reference.get());
     }
 
-    return rv;
+    return NS_OK;
   }
 
   char *uriList = PL_strdup(originalMsgURI);
